# FM24-Player-Analyzer

./: .gitignore  Future_Ideas.md  README.de.md  README.md  config_handler.py  requirements.txt
.github/workflows/: ci.yml  release.yml
config/: definitions.json
desktop/: BACKLOG.md  CMakeLists.txt  CMakePresets.json  QTCREATOR.md  README.md
desktop/installer/: setup.iss
desktop/scripts/: build.ps1  package.ps1
desktop/src/app/: AppContext.cpp  AppContext.h  AppPaths.cpp  AppPaths.h  CMakeLists.txt  FirstRunDialog.cpp  FirstRunDialog.h  ImportRunner.cpp  ImportRunner.h  MainWindow.cpp  MainWindow.h  MigrationWizard.cpp  MigrationWizard.h  PlayerActions.cpp  PlayerActions.h  RecalcHelper.cpp  RecalcHelper.h  app.rc  main.cpp
desktop/src/app/pages/: AssignRolesPage.cpp  AssignRolesPage.h  BestXiPage.cpp  BestXiPage.h  DashboardPage.cpp  DashboardPage.h  DwrsProgressPage.cpp  DwrsProgressPage.h  EditPlayerPage.cpp  EditPlayerPage.h  GapAnalysisPage.cpp  GapAnalysisPage.h  NationalBestXiPage.cpp  NationalBestXiPage.h  NationalDashboardPage.cpp  NationalDashboardPage.h  NationalSquadMatrixPage.cpp  NationalSquadMatrixPage.h  NationalSquadSelectionPage.cpp  NationalSquadSelectionPage.h  NewRolePage.cpp  NewRolePage.h  NewTacticPage.cpp  NewTacticPage.h  PageBase.h  PageHelpers.h  PlaceholderPage.h  PlayerComparisonPage.cpp  PlayerComparisonPage.h  PlayerProfilePage.cpp  PlayerProfilePage.h  RoleAnalysisPage.cpp  RoleAnalysisPage.h  SettingsPage.cpp  SettingsPage.h  SquadMatrixPage.cpp  SquadMatrixPage.h  TacticExplorerPage.cpp  TacticExplorerPage.h  TransfersPage.cpp  (+1 more)
desktop/src/app/resources/: app.qrc  definitions.json
desktop/src/app/theming/: ThemeManager.cpp  ThemeManager.h  ThemePresets.cpp  ThemePresets.h
desktop/src/app/widgets/: CellStyleDelegate.cpp  CellStyleDelegate.h  Charts.cpp  Charts.h  NumericTableItem.h  PersonalityFilterWidget.cpp  PersonalityFilterWidget.h  PlayerSearchModel.h  PlayerTableModel.cpp  PlayerTableModel.h  StrengthGridWidget.cpp  StrengthGridWidget.h  TacticPitchWidget.cpp  TacticPitchWidget.h
desktop/src/core/: AppConfig.cpp  AppConfig.h  Attributes.h  CMakeLists.txt  Constants.cpp  Constants.h  Database.cpp  Database.h  Definitions.cpp  Definitions.h  DwrsEngine.cpp  DwrsEngine.h  GapAnalysis.cpp  GapAnalysis.h  GistRainbowLut.h  HtmlImporter.cpp  HtmlImporter.h  LegacyMigrator.cpp  LegacyMigrator.h  Player.h  PlayerStore.cpp  PlayerStore.h  RatingsUpdater.cpp  RatingsUpdater.h  RoleAnalysis.cpp  RoleAnalysis.h  RoleAssignment.cpp  RoleAssignment.h  SquadBuilder.cpp  SquadBuilder.h  TacticExplorer.cpp  TacticExplorer.h  TalentEngine.cpp  TalentEngine.h  Utils.cpp  Utils.h  Version.cpp  Version.h
desktop/src/tests/: CMakeLists.txt  test_appconfig.cpp  test_database.cpp  test_definitions.cpp  test_dwrs.cpp  test_htmlimporter.cpp  test_migrator.cpp  test_playerstore.cpp  test_smoke.cpp  test_utils.cpp
desktop/src/tools/: CMakeLists.txt  bench_cli.cpp  golden_cli.cpp  migrate_cli.cpp  squadgolden_cli.cpp
desktop/translations/: fmplayeranalyzer_en.ts
legacy/: README_LAUNCHER.md  launcher.py  native_app.py  requirements.txt
legacy/src/: config_handler.py  constants.py  definitions_handler.py  gap_analysis_logic.py  role_analysis_logic.py  role_logic.py  squad_logic.py  talent_logic.py  theme_handler.py
legacy/src/page_views/: assign_roles.py  dwrs_progress.py  edit_player.py  national_best_xi.py  national_dashboard.py  player_comparison.py  player_role_matrix.py  role_analysis.py  settings.py  tactic_explorer.py
legacy/tools/: export_golden.py  export_golden_squad.py
src/: analytics.py  app.py  config_handler.py  constants.py  data_parser.py  definitions_handler.py  definitions_loader.py  role_analysis_logic.py  role_logic.py  sqlite_db.py  squad_logic.py  tactic_explorer_logic.py  theme_handler.py  ui_components.py  utils.py
src/page_views/: all_players.py  assign_roles.py  best_position.py  dwrs_progress.py  edit_player.py  gap_analysis.py  national_best_xi.py  national_dashboard.py  national_squad_matrix.py  national_squad_selection.py  new_role.py  new_tactic.py  player_comparison.py  player_profile.py  player_role_matrix.py  role_analysis.py  settings.py  shortlist.py  tactic_explorer.py  transfer_loan_management.py
