add_executable(fmplayeranalyzer WIN32
    main.cpp
    AppContext.h
    AppContext.cpp
    AppPaths.h
    AppPaths.cpp
    FirstRunDialog.h
    FirstRunDialog.cpp
    MainWindow.h
    MainWindow.cpp
    MigrationWizard.h
    MigrationWizard.cpp
    ImportRunner.h
    ImportRunner.cpp
    PlayerActions.h
    PlayerActions.cpp
    RecalcHelper.h
    RecalcHelper.cpp
    pages/AssignRolesPage.h
    pages/AssignRolesPage.cpp
    pages/BestXiPage.h
    pages/BestXiPage.cpp
    pages/DashboardPage.h
    pages/DashboardPage.cpp
    pages/DwrsProgressPage.h
    pages/DwrsProgressPage.cpp
    pages/EditPlayerPage.h
    pages/EditPlayerPage.cpp
    pages/GapAnalysisPage.h
    pages/GapAnalysisPage.cpp
    pages/NationalBestXiPage.h
    pages/NationalBestXiPage.cpp
    pages/NationalDashboardPage.h
    pages/NationalDashboardPage.cpp
    pages/NationalSquadMatrixPage.h
    pages/NationalSquadMatrixPage.cpp
    pages/NationalSquadSelectionPage.h
    pages/NationalSquadSelectionPage.cpp
    pages/NewRolePage.h
    pages/NewRolePage.cpp
    pages/NewTacticPage.h
    pages/NewTacticPage.cpp
    pages/PageBase.h
    pages/PageHelpers.h
    pages/PlaceholderPage.h
    pages/PlayerComparisonPage.h
    pages/PlayerComparisonPage.cpp
    pages/PlayerProfilePage.h
    pages/PlayerProfilePage.cpp
    pages/RoleAnalysisPage.h
    pages/RoleAnalysisPage.cpp
    pages/SettingsPage.h
    pages/SettingsPage.cpp
    pages/SquadMatrixPage.h
    pages/SquadMatrixPage.cpp
    pages/TacticExplorerPage.h
    pages/TacticExplorerPage.cpp
    pages/TransfersPage.h
    pages/TransfersPage.cpp
    theming/ThemeManager.h
    theming/ThemeManager.cpp
    widgets/CellStyleDelegate.h
    widgets/CellStyleDelegate.cpp
    widgets/Charts.h
    widgets/Charts.cpp
    widgets/PersonalityFilterWidget.h
    widgets/PersonalityFilterWidget.cpp
    widgets/PlayerTableModel.h
    widgets/PlayerTableModel.cpp
    widgets/StrengthGridWidget.h
    widgets/StrengthGridWidget.cpp
    widgets/TacticPitchWidget.h
    widgets/TacticPitchWidget.cpp
    resources/app.qrc
)

target_include_directories(fmplayeranalyzer PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(fmplayeranalyzer PRIVATE
    fmcore
    Qt6::Widgets
    Qt6::Charts
)
